--- a/templates/layouts/chat_base.html
+++ b/templates/layouts/chat_base.html
@@ -64,16 +64,6 @@
         <div class="border-t border-white">
           <form class="flex" ws-send>
             <input
-              type="hidden"
-              name="type"
-              value="chat"
-            />
-            <input
-              type="hidden"
-              name="message_type"
-              value="user_message"
-            />
-            <input
               id="input"
               name="content"
               type="text"
@@ -140,7 +130,24 @@
   });
 
   document.addEventListener("htmx:wsBeforeSend", function (evt) {
-    console.log("Sending message:", evt.detail.message);
+    // Get the form data
+    const form = document.querySelector('form');
+    const formData = new FormData(form);
+    const content = formData.get('content');
+
+    // Create the properly structured message
+    const message = {
+      type: "chat",
+      message: {
+        type: "user_message",
+        content: content
+      }
+    };
+
+    // Replace the message content with our structured message
+    evt.detail.messageBody = JSON.stringify(message);
+
+    console.log("Sending message:", evt.detail.messageBody);
   });
 
   document.addEventListener("htmx:wsAfterMessage", function (evt) {
@@ -206,6 +213,7 @@
     // Update UI
     submitButton.disabled = true;
     submitButton.innerText = "...";
+    input.value = "";
     
     // Add user message to chat
     handleChatMessage({
