--- a/templates/layouts/chat_base.html
+++ b/templates/layouts/chat_base.html
@@ -98,7 +98,7 @@
     <template id="message-template">
       <div class="message flex gap-4 mb-4">
         <div class="flex-shrink-0">
-          <div class="w-8 h-8 border border-white flex items-center justify-center">
+          <div class="w-6 h-6 flex items-center justify-center">
           </div>
         </div>
         <div class="flex-grow">
