--- a/templates/layouts/content.html
+++ b/templates/layouts/content.html
@@ -5,6 +5,6 @@
   "pages/services.html" %} {% when "/company" %} {% include "pages/company.html"
   %} {% when "/coming-soon" %} {% include "pages/coming-soon.html" %} {% when
   "/repomap" %} {% include "pages/repomap.html" %} {% when "/solver" %} {%
-  include "pages/solver.html" %} {% when "/chat" %} {% include "pages/chat.html" %} {% else %} {% include "pages/404.html" %} {%
-  endmatch %}
+  include "pages/solver.html" %} {% when "/chat" %} {% include "pages/chat.html"
+  %} {% else %} {% include "pages/404.html" %} {% endmatch %}
 </div>
